@@ -1754,7 +1754,7 @@ name|GROUP_ID
 argument_list|)
 decl_stmt|;
 name|String
-name|arteficatId
+name|artifactId
 init|=
 name|getFirstChildText
 argument_list|(
@@ -1766,6 +1766,21 @@ argument_list|,
 name|ARTIFACT_ID
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+operator|(
+name|groupId
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|artifactId
+operator|!=
+literal|null
+operator|)
+condition|)
+block|{
 name|exclusions
 operator|.
 name|add
@@ -1776,10 +1791,11 @@ name|newInstance
 argument_list|(
 name|groupId
 argument_list|,
-name|arteficatId
+name|artifactId
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
