@@ -53,6 +53,9 @@
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
       <version>2.0.2</version>
+      <exclusions>
+        <exclusion />
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
